many changes made

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -318,8 +318,8 @@ Computer_Science.bib
     author = {Luís Gil and Paulo Flores and Luís Miguel Silveira},
     title = {PMSat: a parallel version of minisat},
     journal = {Journal on Satisfiability, Boolean Modeling and Computation},
-    year = {},
-    pages = {2008}
+    year = {2008},
+    pages = {71--98}
 }
 
 @TECHREPORT{Sorensson02minisat,
